config-sample/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web-ingress
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/default-backend: frontend
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /robots.txt {
        add_header Content-Type text/plain;
        return 200 'User-agent: *\nDisallow: /\n';
      }
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Host $http_host";
      more_set_headers "X-Real-IP $remote_addr";
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  tls:
  - hosts:
    - nltp.example.com # TODO
    secretName: example-cert # TODO
  rules:
  - host: nltp.example.com # TODO
    http:
      paths:
      - path: /((.*))
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/cat/(.*)
        pathType: Prefix
        backend:
          service:
            name: cat-tool-antivirus
            port:
              number: 80
      - path: /(translateproxy.*)
        pathType: Prefix
        backend:
          service:
            name: web-proxy
            port:
              number: 80
      - path: /api/translate/(text.*)
        pathType: Prefix
        backend:
          service:
            name: text-translation-service
            port:
              number: 80
      - path: /api/translate/(file.*)
        pathType: Prefix
        backend:
          service:
            name: file-translation-antivirus
            port:
              number: 80
      - path: /api/translate/(language-directions.*)
        pathType: Prefix
        backend:
          service:
            name: translation-system
            port:
              number: 80
      - path: /api/(wt.*)
        pathType: Prefix
        backend:
          service:
            name: website-translation-service
            port:
              number: 80
status:
  loadBalancer: {}
---
# Docs
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: docs-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - hosts:
    - nltp.example.com # TODO
    secretName: example-cert # TODO
  rules:
  - host: nltp.example.com # TODO
    http:
      paths:
      - path: /docs(.*)
        pathType: Prefix
        backend:
          service:
            name: docs
            port:
              number: 80
status:
  loadBalancer: {}
---
# Keycloak
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: keycloak-auth
  namespace: default
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For: $proxy_add_x_forwarded_for";
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  defaultBackend:
    service:
      name: keycloak
      port:
        number: 443
  tls:
  - hosts:
    - nltp-auth.example.com # TODO
    secretName: example-cert # TODO
  rules:
  - host: nltp-auth.example.com # TODO
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 443
status:
  loadBalancer: {}
---
# CMS
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: http-ingress-strapi
  namespace: default
  annotations:
    # Allow larger file uploads
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - nltp-cms.example.com # TODO
    secretName: example-cert # TODO
  rules:
  - host: nltp-cms.example.com # TODO
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-cms
            port:
              number: 80
status:
  loadBalancer: {}
---
# CDN
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cdn
  namespace: default
spec:
  tls:
  - hosts:
    - nltp-cdn.example.com # TODO
    secretName: example-cert # TODO
  rules:
  - host: nltp-cdn.example.com # TODO
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cdn
            port:
              number: 80
status:
  loadBalancer: {}
---
# NecTM Admin site - enable only during setup!
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: "nectm-admin"
#   namespace: default
#   annotations:
#     kubernetes.io/ingress.class: public
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#       more_set_headers "Host $http_host";
#       more_set_headers "X-Real-IP $remote_addr";
#       more_set_headers "X-Forwarded-For $http_x_forwarded_for";
#       more_set_headers "X-Forwarded-Proto $scheme";
# spec:
#   tls:
#   - hosts:
#     - nltp-nectm.example.com # TODO
#     secretName: example-cert # TODO
#   rules:
#     - host: nltp-nectm.example.com # TODO
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: nectm
#                 port:
#                   number: 7979
# status:
#   loadBalancer: {}
